my soul has left my body

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ edition = "2021"
 rug = "1.19"
 peg = "0.8.1"
 regex = "1.8.1"
-rustyline = "10.0.0"
+rustyline = { version = "10.0.0", features = ["custom-bindings"] }
 rustyline-derive = "0.7.0"
 rand = "0.8.5"
 ansi_term = "0.12.1"
+signal-hook = "0.3.15"
