--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,16 @@
 name = "rustcalc-4"
 version = "0.1.0"
 edition = "2021"
+authors = ["blahblahbloopster"]
+description = "A command line RPN calculator with multiple precision and unit support"
+readme = "README.md"
+repository = "https://github.com/blahblahbloopster/calculator-3"
+license = "Apache-2.0"
+keywords = ["command-line-utilities", "mathematics"]
+include = ["units.txt", "context.txt"]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "rustcalc-4"
 
 [dependencies]
 rug = "1.19"
